--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 
     implementation 'com.contentful.java:java-sdk:10.1.0'
-
+    implementation 'com.github.m2mobi.MarkyMark-Android:markymark-android:0.2.3'
+    implementation 'com.github.m2mobi.MarkyMark-Android:markymark-contentful:0.2.3'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.50'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
