--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             >
         <activity
                 android:name=".MainActivity"
@@ -30,10 +30,7 @@
                         />
             </intent-filter>
         </activity>
-        <activity
-                android:name=".home.StartupActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                >
+        <activity android:name=".home.StartupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
