--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ kotlin {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
@@ -58,7 +59,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:15.0.1'
 
     implementation 'com.contentful.java:java-sdk:10.1.0'
-    
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.50'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
