--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
             buildConfigField("String", "CONTENTFUL_SPACE_ID", "\"qz0n5cdakyl9\"")
         }
     }
-    buildToolsVersion '28.0.0 rc1'
+    buildToolsVersion '28.0.1'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,6 +57,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha02"
     implementation 'com.google.android.gms:play-services-oss-licenses:15.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 
     implementation 'com.contentful.java:java-sdk:10.1.0'
 
