--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     implementation 'com.contentful.java:java-sdk:10.1.0'
 
+    implementation 'com.atlassian.commonmark:commonmark:0.11.0'
+
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.50'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
