--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         applicationId "com.contentful.tea.kotlin"
@@ -15,6 +16,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -27,11 +29,12 @@ android {
             buildConfigField("String", "CONTENTFUL_SPACE_ID", "\"qz0n5cdakyl9\"")
         }
     }
-    buildToolsVersion '28.0.1'
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
         test.java.srcDirs += 'src/test/kotlin'
@@ -58,6 +61,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha03"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha03"
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.0'
+
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
