--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.contentful.tea.kotlin"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 4
+        versionName "1.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -23,7 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         all {
-            buildConfigField("String", "CONTENTFUL_DELIVERY_API_HOST", "\".contentful.com\"")
+            buildConfigField("String", "CONTENTFUL_HOST", "\"contentful.com\"")
             buildConfigField("String", "CONTENTFUL_DELIVERY_TOKEN", "\"580d5944194846b690dd89b630a1cb98a0eef6a19b860ef71efc37ee8076ddb8\"")
             buildConfigField("String", "CONTENTFUL_PREVIEW_TOKEN", "\"e8fc39d9661c7468d0285a7ff949f7a23539dd2e686fcb7bd84dc01b392d698b\"")
             buildConfigField("String", "CONTENTFUL_SPACE_ID", "\"qz0n5cdakyl9\"")
