--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'androidx.preference:preference:1.0.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.preference:preference:1.0.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha04"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha04"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha05"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha05"
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.0'
 
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
