--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.contentful.tea.kotlin"
         >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="false"
@@ -15,20 +14,13 @@
             android:supportsRtl="true"
             android:theme="@style/TeaStyle"
             android:hardwareAccelerated="true"
+            tools:ignore="GoogleAppIndexingWarning"
             >
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTop"
                 android:screenOrientation="portrait"
                 >
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-                <data android:scheme="the-example-app-mobile"/>
-            </intent-filter>
         </activity>
         <activity
                 android:name=".home.StartupActivity"
