--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha05"
         classpath "com.google.gms:oss-licenses:0.9.2"
+        classpath 'com.apollographql.apollo:apollo-gradle-plugin:1.0.0-alpha2'
     }
 }
 
