--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
+apply plugin: 'com.apollographql.android'
 
 android {
     compileSdkVersion 28
@@ -73,6 +74,8 @@ dependencies {
     implementation 'com.contentful.java:java-sdk:10.1.0'
 
     implementation 'com.atlassian.commonmark:commonmark:0.11.0'
+
+    implementation 'com.apollographql.apollo:apollo-runtime:1.0.0-alpha2'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.61'
